fix(button): fix styling on disabled buttons in contrast
affects: @entur/button

--- a/packages/button/src/Button.scss
+++ b/packages/button/src/Button.scss
@@ -223,9 +223,9 @@ a.eds-button {
     cursor: not-allowed;
 
     .eds-contrast & {
-      background-color: $colors-blues-blue40;
-      border-color: $colors-blues-blue40;
-      color: $colors-blues-blue60;
+      background-color: $colors-blues-blue20;
+      border-color: $colors-blues-blue20;
+      color: $colors-brand-lavender;
     }
   }
 }
